# Mobile-Crawler-Platform

./: .gitignore  CMakeLists.txt  README.md  mav.tlog  mav.tlog.raw
cv/: apriltag_follower.py  camera.py  config.py  detection.py  follower.py  main.py  mavlink_controller.py  pid_controller.py  steering.py  visualization.py
headers/common/: common.h  mavlink.h
headers/minimal/: mavlink.h  minimal.h
headers/standard/: mavlink.h  standard.h
sensors_test/sensors/: __init__.py  all_sensors.py  distance.py  imu.py
sensors_test/tests/: test_gps.py  test_imu.py  test_imu_magnetometer.py  test_vl53l0x.py
src/: gears.py  main.c  mav.tlog  mav.tlog.raw  simple_control.py  test_mod.py
ssh-bridge/: CMakeLists.txt
vepryk-control/: CMakeLists.txt  config.json  main.cpp
vepryk-control/GUI/: main.cpp  main_window.cpp  main_window.h  mavlink_thread.cpp  mavlink_thread.h  video_display.cpp  video_display.h  video_thread.cpp  video_thread.h
vepryk-control/common/: config_loader.cpp  config_loader.h  control_interface.h
vepryk-control/input/: CONFIG.md  config.json  joystick_config.h  joystick_handler.cpp  joystick_handler.h  test_joystick.cpp
vepryk-control/network/: mavlink_constants.h  mavlink_sender.cpp  mavlink_sender.h  ssh_bridge.cpp  ssh_bridge.h
